--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -57,7 +57,7 @@ jobs:
           name: "Mkdir"
           command: "mkdir -p workspace && touch workspace/file.txt"
       - persist_to_workspace:
-          root: /workspace
+          root: /tmp/workspace
           paths:
             - "file.txt"
 
