--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
       - checkout
       - run:
           name: "Mkdir"
-          command: "mkdir -p workspace && touch workspace/file.txt"
+          command: "mkdir -p workspace && touch workspace/file.txt && ls"
       - persist_to_workspace:
           root: /tmp/workspace
           paths:
