--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,7 @@ jobs:
     steps:
       - checkout
       - attach_workspace:
-          at: /workspace/file.txt
+          at: ./workspace/file.txt
       - run:
           name: "Ls"
           command: "ls /tmp/workspace/file.txt"
